# copper

./: Cargo.toml  README.md  clippy.toml  fish.exe.stackdump
src/: client.rs  data_types.rs  handshaking.rs  login.rs  main.rs  packet.rs  play.rs  server_status.rs  status.rs
